--- a/MIST143_Traveler/Views/CustomerCenter/OrderDE.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/OrderDE.cshtml
@@ -114,7 +114,7 @@
                             @{
                                 if (Model.訂單.FirstOrDefault().優惠券 == null)
                                 {
-                                    <p>優惠券名稱:無使用優惠券</p>
+                                    <p>優惠券名稱:無使用</p>
                                     折扣 = 0;
                                 }
                                 else
