--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -120,7 +120,7 @@
     });
 
     function DemoCALL() {
-        $("#Actemail").val("customer143-1@outlook.com")
+        $("#Actemail").val("service@outlook.com")
         $("#Pas").val("a77777777")
     }
 
@@ -144,7 +144,7 @@
         //    'You clicked the button!',
         //    'success'
         //)
-        act.value = "msit143-1customer@outlook.com";
+        act.value = "msit143-8customer@outlook.com";
         pas.value = "a77777777";
         }
 
