--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -2,10 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="/Images/fav.png">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>PlanetTravel</title>
     <link rel="stylesheet" href="~/css/travelIndex.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
