--- a/MIST143_Traveler/Views/Shared/_Layout.cshtml
+++ b/MIST143_Traveler/Views/Shared/_Layout.cshtml
@@ -211,7 +211,7 @@
                         <li><a href="#">娛樂&文化</a></li>
                     </ul>
                 </li>
-                <li><a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">美食品嘗</a></li>
+                <li><a style="border-radius: 10px" href="@Url.Content("~/Home/eat")">美食品嘗</a></li>
                 <li>
                     <a style="border-radius: 10px" href="@Url.Content("~/ProductListPage/ProductListHomePage")">住宿</a>
                     <ul>
